added a sample of ecnrypt decrypt and key exchange

--- a/FSchatFront/FSchatFront.csproj
+++ b/FSchatFront/FSchatFront.csproj
@@ -58,6 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="encdeckeyx.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="encdeckeyx.Designer.cs">
+      <DependentUpon>encdeckeyx.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="encdeckeyx.resx">
+      <DependentUpon>encdeckeyx.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
